--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,17 @@
+--- 
+artifacts: 
+  files: 
+    - "**/*"
+phases: 
+  commands: 
+    - "pip install --upgrade pip"
+    - "pip install -r requirements.txt pylint"
+  install: 
+    runtime-versions: 
+      python: 3.7
+  pre_build: 
+    commands: 
+      - "python --version"
+      - "pylint $CODEBUILD_SRC_DIR/*.py"
+      - "pylint $CODEBUILD_SRC_DIR/demoproj/*.py"
 version: 0.2
-
-phases:
-    install:
-        runtime-versions:
-            python: 3.7
-    commands:
-        - pip install --upgrade pip
-        # Install dependencies needed for running the static analysis
-        - pip install -r requirements.txt pylint
-        
-    pre_build:
-        commands:
-            - python --version
-            - pylint $CODEBUILD_SRC_DIR/*.py
-            - pylint $CODEBUILD_SRC_DIR/demoproj/*.py
-            
-artifacts:
-    files:
-        - '**/*'
