--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
         commands:
             - python --version
             - pylint $CODEBUILD_SRC_DIR/*.py
-            - pylint $CODEBUILD_SRC_DIR/demoproj/*.py
+            - pylint $CODEBUILD_SRC_DIR/blog/*.py
 artifacts:
     files:
         - '**/*'
