--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
+    StaticFiles: /static/=static/
     WSGIPath: blog.wsgi:application
+  aws:elasticbeanstalk:environment:proxy:staticfiles:
+    /static: static
