--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,8 @@ phases:
     pre_build:
         commands:
             - python --version
-            - pylint $CODEBUILD_SRC_DIR/*.py
-            - pylint $CODEBUILD_SRC_DIR/blog/*.py
+            # - pylint $CODEBUILD_SRC_DIR/*.py
+            # - pylint $CODEBUILD_SRC_DIR/blog/*.py
 artifacts:
     files:
         - '**/*'
